@@ -1,3 +1,9 @@
+2012-01-30 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
+	* godmode/agentes/module_manager_editor_prediction.php
+
+	Bigfix merged from trunk.
+
 2012-01-25 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
 	* include/functions_reporting.php: 
